--- a/src/index.twig
+++ b/src/index.twig
@@ -1,18 +1,18 @@
 {# Meta Info #}
-{% set title = 'Great Portland Dentist - Gerald Kennedy, DMD, MAGD' %}
-{% set description = "Dr. Gerald Kennedy is one of Portland’s most loved dentists. Join us for a $45 Limited Time New Patient Special. Read our patient reviews!" %}
-{% set keywords = 'Portland cosmetic dentist, Portland family dentist, Portland general dentist, Gerald Kennedy DMD MAGD, Dr. Gerald Kennedy, Kennedy Dental, Cosmetic Dentistry, Implants, Great with Children, Bonding, Family Care, Sedation, Smile Design, Veneers, Whitening, Wisdom Teeth' %}
+{% set title = 'Great Atlanta Pediatric Dentist - Dr. Jaha Howard' %}
+{% set description = "Dr. Jaha Howard is one of Atlanta's most loved pediatric dentists. Now Welcoming New Patients!" %}
+{% set keywords = 'dr. jaha howard, jaha howard dds ms, a+ pediatric dentistry of atlanta, atlanta pediatric dentist, pediatric dentist in atlanta, children\'s dentistry, kids dentist, child dentist, dentistry for teens' %}
 
 {# Common filler #}
-{% set mainDocter = 'Gerald Kennedy, DMD, MAGD' %}
+{% set mainDocter = 'Dr. Jaha Howard' %}
 
 {# Contact info #}
-{% set newPhone = '1-866-552-4346' %}
-{% set newPhoneNoBreak = '(866)&nbsp;552&#8209;4346' %}
-{% set existingPhone = '1-503-289-0230' %}
-{% set existingPhoneNoBreak = '(503)&nbsp;289&#8209;0230' %}
-{% set addressFirst = '3506 N Lombard Street' %}
-{% set addressLast = 'Portland, OR 97217' %}
+{% set newPhone = '1-888-485-5139' %}
+{% set newPhoneNoBreak = '(888)&nbsp;485&#8209;5139' %}
+{% set existingPhone = '1-678-391-7453' %}
+{% set existingPhoneNoBreak = '(678)&nbsp;391&#8209;7453' %}
+{% set addressFirst = '4300 Paces Ferry Rd, Suite 405' %}
+{% set addressLast = 'Atlanta, GA 30339' %}
 
 {# Birdeye Review WidgetCode #}
 {% set birdeye = '2057349202' %}
@@ -147,20 +147,12 @@
 {% set socialMediaLinks = [
 {
 'media': 'google-plus',
-'link': 'https://plus.google.com/106882318515528596731?hl=en'
+'link': 'https://www.google.com/maps/place/Howard+J+DDS/@33.8646248,-84.4670102,20.16z/data=!4m7!3m6!1s0x88f5106e60546ecd:0xd66e75d21e3b2b7c!8m2!3d33.8647032!4d-84.4668653!9m1!1b1?hl=en'
 },
 {
 'media': 'facebook',
-'link': 'https://www.facebook.com/Kennedy-Dental-735751416488911/'
-},
-{
-'media': 'youtube',
-'link': 'https://www.youtube.com/channel/UCO0WxCqwy3OQG8ubRWF5GBw'
-},
-{
-'media': 'yelp',
-'link': 'https://www.yelp.com/biz/kennedy-dental-portland-3'
-},
+'link': 'https://www.facebook.com/A-Pediatric-Dentistry-of-Atlanta-with-Dr-Howard-169651139741065/'
+}
 ] %}
 
 {% extends 'layouts/index.twig' %}
