update fonts and navbar

--- a/src/scss/globals/_vars.scss
+++ b/src/scss/globals/_vars.scss
@@ -1,6 +1,8 @@
 //Font Families
 $ff-advent: 'Advent Pro', sans-serif;
+$ff-berkshir: 'Berkshire Swash', cursive;
 $ff-cardo: 'Cardo', serif;
+$ff-caveat: 'Caveat Brush', cursive;
 $ff-crimson: 'Crimson Text', serif;
 $ff-dancing: 'Dancing Script', cursive;
 $ff-josef: 'Josefin Sans', sans-serif;
@@ -8,10 +10,10 @@ $ff-lato: 'Lato', serif;
 $ff-mont: 'Montserrat', sans-serif;
 $ff-open: 'Open Sans', sans-serif;
 $ff-oswald: 'Oswald', sans-serif;
+$ff-poppins: 'Poppins', sans-serif;
 $ff-raleway: 'Raleway', sans-serif;
 $ff-roboto: 'Roboto', sans-serif;
 $ff-roboto-condensed: 'Roboto Condensed', sans-serif;
-$ff-berkshir: 'Berkshire Swash', cursive;
 
 .font-crimson {
   font-family: 'Crimson Text', serif;
