--- a/src/scss/atoms/_fonts.scss
+++ b/src/scss/atoms/_fonts.scss
@@ -7,11 +7,13 @@
 
 
 body {
+	font-family: $ff-poppins;
 	color: $c-black;
 	line-height: 1.5;
 }
 
 p {
+	font-family: $ff-poppins;
 	margin-bottom: $spacing-sm;
 	font-size: 16px;
 }
