--- a/src/templates/organisms/marquee.twig
+++ b/src/templates/organisms/marquee.twig
@@ -15,12 +15,12 @@
             <!--Slide 1-->
             <!--=======-->
             <div class="swiper-slide swiper-slide-active slide1">
-                <img src="/assets/slide/slide1.jpg" alt="Dr. Kerber and Family">
+                <img src="/assets/slide/slide1.jpg" alt="Happy kids with great smiles">
                 <div class="container clearfix slide-content">
                     <div class="row">
-                        <div class="col-sm-6">
-                            <h1 class="slide__title">Excellence is at the<br>core of who we are</h1>
-                            <h3 class="slide__copy">Creating Beautiful Smiles for Portland <br>Area Families Since 1991</h3>
+                        <div class="col-sm-6 center">
+                            {#<h1 class="slide__title">Excellence is at the<br>core of who we are</h1>#}
+                            <h3 class="slide__copy">Now Welcoming New Patients!</h3>
                             <a href="#" class="btn" data-scrollto="#section-specials" data-offset="80">New Patient Offers</a>
                         </div>
                     </div>
@@ -29,35 +29,35 @@
 
             {#<!--Slide 3-->#}
             {#<!--=======-->#}
-            <div class="swiper-slide slide2">
-                <img src="/assets/slide/slide2.jpg" alt="Children Playing">
-                <div class="container clearfix slide-content">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <h1 class="slide__title">See what our<br>patients are saying</h1>
-                            <h3 class="stars"><i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i></h3>
-                            <h5 class="copy">“The Best Dentist in Portland. Dr. Kennedy and his team will <br>take great care of you and your family. Two thumbs up!” &#8209;Pat&nbsp;K.</h5>
-                            <a href="#" class="btn" data-offset="80" data-scrollto="#section-reviews">Read Our Reviews</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {#<div class="swiper-slide slide2">#}
+                {#<img src="/assets/slide/slide2.jpg" alt="Children Playing">#}
+                {#<div class="container clearfix slide-content">#}
+                    {#<div class="row">#}
+                        {#<div class="col-sm-6">#}
+                            {#<h1 class="slide__title">See what our<br>patients are saying</h1>#}
+                            {#<h3 class="stars"><i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i></h3>#}
+                            {#<h5 class="copy">“The Best Dentist in Portland. Dr. Kennedy and his team will <br>take great care of you and your family. Two thumbs up!” &#8209;Pat&nbsp;K.</h5>#}
+                            {#<a href="#" class="btn" data-offset="80" data-scrollto="#section-reviews">Read Our Reviews</a>#}
+                        {#</div>#}
+                    {#</div>#}
+                {#</div>#}
+            {#</div>#}
 
             {#<!--Slide 2-->#}
             {#<!--=======-->#}
-            <div class="swiper-slide slide3">
-                <img src="/assets/slide/slide3.jpg" alt="Happy mother and daughter with bright smiles">
-                <div class="container clearfix slide-content">
-                    <div class="row">
-                        <div class="col-sm-6">
-                            <h1 class="title--no-insure">NO INSURANCE?</h1>
-                            <h1 class="title--sub">Our Patients Don’t Need It!</h1>
-                            <h3 class="preventative-copy">Get your preventive care<br>for a low monthly fee</h3>
-                            <a href="#" class="btn btn--style-three" data-offset="80" data-scrollto="#section-insurance">Learn More</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            {#<div class="swiper-slide slide3">#}
+                {#<img src="/assets/slide/slide3.jpg" alt="Happy mother and daughter with bright smiles">#}
+                {#<div class="container clearfix slide-content">#}
+                    {#<div class="row">#}
+                        {#<div class="col-sm-6">#}
+                            {#<h1 class="title--no-insure">NO INSURANCE?</h1>#}
+                            {#<h1 class="title--sub">Our Patients Don’t Need It!</h1>#}
+                            {#<h3 class="preventative-copy">Get your preventive care<br>for a low monthly fee</h3>#}
+                            {#<a href="#" class="btn btn--style-three" data-offset="80" data-scrollto="#section-insurance">Learn More</a>#}
+                        {#</div>#}
+                    {#</div>#}
+                {#</div>#}
+            {#</div>#}
 
         </div>
     </div>
