--- a/src/scss/atoms/_fonts.scss
+++ b/src/scss/atoms/_fonts.scss
@@ -21,7 +21,6 @@ p {
 /// @group typography
 @mixin headings() {
 	line-height: 1.5;
-	font-weight: 700;
 }
 h1,
 h2,
@@ -31,7 +30,6 @@ h5,
 h6 {
 	color: #000000;
 	font-family: $ff-poppins;
-	font-weight: 700;
 }
 
 
@@ -85,8 +83,7 @@ h1 {
 @mixin h2() {
 	@include headings();
 	@include font-size(56px, 48px, 44px, 40px, 35px);
-	font-family: $ff-mont;
-	font-weight: 700;
+	font-family: $ff-caveat;
 }
 
 .h2,
