--- a/src/scss/molecules/_buttons.scss
+++ b/src/scss/molecules/_buttons.scss
@@ -1,42 +1,41 @@
 a.btn,
 button.btn {
-  font-family: $ff-roboto-condensed;
+  font-family: $ff-poppins;
   font-weight: 400 !important;
-  @include font-size(26px, 24px, 23px, 23px, 22px);
+  @include font-size(18px, 18px, 17px, 16px, 16px);
   letter-spacing: 1px;
 
-  background-color: #5a710d;
-  color: $c-white;
-  border-radius: 8px;
-  padding: $spacing-sm $spacing-md;
-  text-decoration: underline;
+  background-color: #FFA101;
+  color: #000000;
+  border-radius: 10px;
+  border: solid 2px #000000;
+  padding: 10px 40px;
 
   &:hover, &:focus {
-    background-color: darken(#5a710d, 15% );
-    box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.36);
+    background-color: darken(#FFA101, 15% );
+    //box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.36);
     transition: all .3s ease;
-    //transition: background-color .3s ease;
     text-decoration: none;
     color: $c-white;
   }
 
-  &.btn--style-two {
-    background-color: #bb471a;
-    &:hover, &:focus {
-      background-color: darken(#bb471a, 15% );
-      box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.36);
-    }
-  }
-  &.btn--style-three {
-    background-color: rgba(255, 255, 255, 0.80);
-    color: #5a710d;
-    border: solid 2px #5a710d;
-    &:hover, &:focus {
-      background-color: #ffffff;
-      color: #5a710d;
-      box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.36);
-    }
-  }
+  //&.btn--style-two {
+  //  background-color: #bb471a;
+  //  &:hover, &:focus {
+  //    background-color: darken(#bb471a, 15% );
+  //    box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.36);
+  //  }
+  //}
+  //&.btn--style-three {
+  //  background-color: rgba(255, 255, 255, 0.80);
+  //  color: #5a710d;
+  //  border: solid 2px #5a710d;
+  //  &:hover, &:focus {
+  //    background-color: #ffffff;
+  //    color: #5a710d;
+  //    box-shadow: 1px 3px 6px rgba(0, 0, 0, 0.36);
+  //  }
+  //}
 
 
   @media screen and (max-width: $width-sm) {
@@ -52,15 +51,4 @@ button.btn {
 
   }
 
-}
-
-
-button.btn-style-2 {
-  color: #67250d;
-  background: #fbad17;
-  border: 2px solid #67250d;
-}
-
-button.btn {
-  text-transform: uppercase;
 }
