--- a/src/scss/organisms/_marquee.scss
+++ b/src/scss/organisms/_marquee.scss
@@ -58,46 +58,48 @@
   }
   .slide2 {
     .slide__title {
-      color: #5a710d;
-      font-family: $ff-berkshir;
+      color: #63358E;
+      font-family: $ff-caveat;
       margin-bottom: 20px;
       line-height: 0.8;
       font-weight: 400;
+      &:first-line {
+        color: #8e45d8;
+      }
     }
     .stars {
       line-height: 1.1;
-      margin-bottom: 0;
+      margin-bottom: 30px;
     }
     .icon-star3 {
-      text-shadow: 2px 2px 6px rgba(0, 0, 0, 0.50);
-      color: #FBDA04;
+      color: rgba(251, 221, 1, 0.71);
     }
     .copy {
       font-weight: 400;
       line-height: 1.2;
-      margin-bottom: 60px;
+      margin-bottom: 30px;
       @include font-size(22px, 19px, 18px, 20px, 19px);
     }
   }
   .slide3 {
     .title--no-insure {
-      color: #ffffff;
-      font-family: $ff-mont;
+      font-family: $ff-caveat;
+      color: #8e45d8;
       margin-bottom: 0;
       line-height: 1;
+      font-weight: 700;
       @include  font-size(62px, 60px, 35px);
     }
     .title--sub {
-      color: #ffffff;
-      font-family: $ff-berkshir;
+      color: #658540;
+      font-family: $ff-caveat;
       font-weight: 400;
       line-height: 1;
-      margin-bottom: 60px;
+      margin-bottom: 45px;
       @include  font-size(46px, 38px, 35px);
     }
     .preventative-copy {
-      color: #ffffff;
-      text-transform: uppercase;
+      color: #000000;
       font-weight: 400;
       line-height: 1.1;
     }
