--- a/src/templates/organisms/marquee.twig
+++ b/src/templates/organisms/marquee.twig
@@ -29,35 +29,36 @@
 
             {#<!--Slide 3-->#}
             {#<!--=======-->#}
-            {#<div class="swiper-slide slide2">#}
-                {#<img src="/assets/slide/slide2.jpg" alt="Children Playing">#}
-                {#<div class="container clearfix slide-content">#}
-                    {#<div class="row">#}
-                        {#<div class="col-sm-6">#}
-                            {#<h1 class="slide__title">See what our<br>patients are saying</h1>#}
+            <div class="swiper-slide slide2">
+                <img src="/assets/slide/slide2.jpg" alt="Happy Mother and Child">
+                <div class="container clearfix slide-content">
+                    <div class="row">
+                        <div class="col-sm-6 center">
+                            <h1 class="slide__title">See What<br>Parents are Saying!</h1>
                             {#<h3 class="stars"><i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i>&nbsp;<i class="icon-star3"></i></h3>#}
-                            {#<h5 class="copy">“The Best Dentist in Portland. Dr. Kennedy and his team will <br>take great care of you and your family. Two thumbs up!” &#8209;Pat&nbsp;K.</h5>#}
-                            {#<a href="#" class="btn" data-offset="80" data-scrollto="#section-reviews">Read Our Reviews</a>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
+                            <div class="stars"><img src="assets/slide/slide2-stars.png" alt="five stars"></div>
+                            <h5 class="copy">“My toddler loved it so much that when we got home, she wanted to play "Dr. Howard's office" with her baby doll!”<strong>&#8209;Megan&nbsp;S</strong></h5>
+                            <a href="#" class="btn" data-offset="80" data-scrollto="#section-reviews">Read More Reviews</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
             {#<!--Slide 2-->#}
             {#<!--=======-->#}
-            {#<div class="swiper-slide slide3">#}
-                {#<img src="/assets/slide/slide3.jpg" alt="Happy mother and daughter with bright smiles">#}
-                {#<div class="container clearfix slide-content">#}
-                    {#<div class="row">#}
-                        {#<div class="col-sm-6">#}
-                            {#<h1 class="title--no-insure">NO INSURANCE?</h1>#}
-                            {#<h1 class="title--sub">Our Patients Don’t Need It!</h1>#}
-                            {#<h3 class="preventative-copy">Get your preventive care<br>for a low monthly fee</h3>#}
-                            {#<a href="#" class="btn btn--style-three" data-offset="80" data-scrollto="#section-insurance">Learn More</a>#}
-                        {#</div>#}
-                    {#</div>#}
-                {#</div>#}
-            {#</div>#}
+            <div class="swiper-slide slide3">
+                <img src="/assets/slide/slide3.jpg" alt="Two happy kids back from the dentist">
+                <div class="container clearfix slide-content">
+                    <div class="row">
+                        <div class="col-sm-6 center">
+                            <h1 class="title--no-insure">NO INSURANCE?</h1>
+                            <h1 class="title--sub">Our Patients Don’t Need It!</h1>
+                            <h3 class="preventative-copy">Get your preventive care<br>for a low monthly fee.</h3>
+                            <a href="#" class="btn btn--style-three" data-offset="80" data-scrollto="#section-insurance">Learn More</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
         </div>
     </div>
