clean up first call to action

--- a/src/scss/organisms/_call-to-action__two-to-one.scss
+++ b/src/scss/organisms/_call-to-action__two-to-one.scss
@@ -1,18 +1,18 @@
 /// Call to Action Two to One Layout
 .cta__two-to-one {
-  background-color: #F4F3EE;
+  background-color: #A1D25E;
   background-position: center;
   z-index: 100;
   position: relative;
-  padding-bottom: 30px;
-  padding-top: 20px;
+  padding-bottom: 5px;
+  padding-top: 5px;
   box-shadow: 0 1px 6px rgba(0, 0, 0, 0.5);
 
   .flex--wrapper {
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
     padding-top: 30px;
     padding-bottom: 10px;
     @media screen and (max-width: $width-md) {
@@ -38,18 +38,18 @@
     padding-right: 15px;
     .text {
       color: #000000;
-      margin-bottom: 0;
+      margin-bottom: 5px;
       font-weight: 400;
     }
     &-number {
-      color: #595955;
-      font-family: $ff-roboto-condensed;
+      color: #000000;
       font-weight: 700;
       margin-bottom: 0;
       line-height: 1;
+      font-family: $ff-poppins;
       @include font-size(36px, 33px, 30px, 28px, 28px);
       a {
-        @include link-color(#595955);
+        @include link-color(#000000);
         &:hover {
           text-decoration: none;
         }
@@ -88,14 +88,12 @@
   }
 
   .existing-patient {
-    color: #595955;
+    color: #000000;
     text-align: center;
     line-height: 1;
     .phone-number--existing {
       @include  h5();
-      font-family: $ff-lato;
-      font-weight: 700;
-      @include link-color(#595955);
+      @include link-color(#000000);
       &:hover {
         text-decoration: none;
       }
