add video slab to about section

--- a/src/index.twig
+++ b/src/index.twig
@@ -19,8 +19,8 @@
 {% set birdeyeScript = 'https://birdeye.com/embed/v4/148907462669028/3/2057349202' %}
 
 {# External Links #}
-{% set insuranceLink = 'https://kennedy-dental.illumitrac.com/#programs' %}
-{% set googleMap = 'https://www.google.com/maps/place/Kennedy+Dental/@45.5769904,-122.7052171,17z/data=!3m1!4b1!4m5!3m4!1s0x5495a79600d0ac83:0x7b971a33f17f828!8m2!3d45.5769904!4d-122.7030284' %}
+{% set insuranceLink = 'https://a-pediatric-dentistry-of-atlanta.illumitrac.com/#programs' %}
+{% set googleMap = 'https://www.google.com/maps/place/Howard+J+DDS/@33.8646248,-84.4670102,20.16z/data=!4m7!3m6!1s0x88f5106e60546ecd:0xd66e75d21e3b2b7c!8m2!3d33.8647032!4d-84.4668653!9m1!1b1?hl=en' %}
 
 {% set services = [
 {
