--- a/src/scss/organisms/_about.scss
+++ b/src/scss/organisms/_about.scss
@@ -45,64 +45,19 @@
         color: #ffffff;
         font-size: 14px;
         line-height: 1.5 !important;
-        //@media (max-width: $width-md) {
-        //  display: none;
-        //}
-        //&--doctor {
-        //  color: #5a710d;
-        //  line-height: 1;
-        //  margin-bottom: 0;
-        //  font-family: $ff-mont;
-        //  font-weight: 700;
-        //}
-        //&--mobile {
-        //  display: none;
-        //  @media (max-width: $width-md) {
-        //    display: inherit;
-        //  }
-        //}
-        //&--read-more {
-        //  color: #5a710d;
-        //  text-decoration: underline;
-        //  font-size: 18px;
-        //  &:hover {
-        //    color: #5a710d;
-        //    text-decoration: none !important;
-        //  }
-        //}
       }
 
-  //Additional Team Mates Styling
-  &__mitchell,
-  &__ybarra {
-    margin-top: 15px;
-    margin-bottom: 15px;
-    display: flex;
-    flex-direction: column;
-    @media (min-width: $width-sm) {
-      flex-direction: row;
-      justify-content: space-between;
-      align-items: center;
-    }
+  &__video {
+    background-color: #195B87;
+    border-bottom: solid 5px #ffffff;
   }
-  &__image-wrapper--smaller-image {
-    @media (min-width: $width-sm) {
-      width: 30%;
+    &__video-thumb {
+      text-align: center;
+      img {
+        border: solid 10px #ffffff;
+        margin-bottom: 45px;
+      }
     }
-  }
-  &__copy-wrapper--smaller-image {
-    @media (min-width: $width-sm) {
-      width: 70%;
-    }
-  }
-
-  &__mitchell .about__image-wrapper {
-    order: 1;
-    @media (max-width: $width-sm) {
-      order: 0;
-    }
-  }
-
 }
 
 
