--- a/src/scss/organisms/_header.scss
+++ b/src/scss/organisms/_header.scss
@@ -152,6 +152,9 @@
 }
 
 
-#header.sticky-header:not(.static-sticky), #header.sticky-header:not(.static-sticky) #header-wrap, #header.sticky-header:not(.static-sticky):not(.sticky-style-2):not(.sticky-style-3) #logo img {
+#header.sticky-header:not(.static-sticky),
+#header.sticky-header:not(.static-sticky) #header-wrap,
+#header.sticky-header:not(.static-sticky):not(.sticky-style-2):not(.sticky-style-3) #logo img,
+#header.sticky-header:not(.static-sticky) #logo {
   height: 80px !important;
 }
