--- a/src/templates/organisms/about.twig
+++ b/src/templates/organisms/about.twig
@@ -1,5 +1,15 @@
 <section id="section-about" class="clearfix about">
     {#{% include 'molecules/video-promo--full-slab-with-modal.twig' %}#}
+    <div class="about__video">
+        <div class="about__heading">
+            <h2 class="about__title">Watch Our Video</h2>
+        </div>
+        <div class="about__video-thumb">
+            <a href="#" data-toggle="modal" data-target="video-modal">
+                <img src="assets/video-thumb.jpg" alt="Watch a video with {{ mainDoctor }}">
+            </a>
+        </div>
+    </div>
     <div class="about__main" id="section-about--scroll-target">
         <div class="container">
             <div class="about__heading">
