attach video modal

--- a/src/index.twig
+++ b/src/index.twig
@@ -5,6 +5,7 @@
 
 {# Common filler #}
 {% set mainDocter = 'Dr. Jaha Howard' %}
+{% set mainDoctor = 'Dr. Jaha Howard' %}
 
 {# Contact info #}
 {% set newPhone = '1-888-485-5139' %}
