--- a/src/scss/organisms/_new-specials.scss
+++ b/src/scss/organisms/_new-specials.scss
@@ -1,11 +1,11 @@
 #section-specials {
 
-  background:url('/assets/specials-row.jpg');
+  background:url('/assets/specials-bg.jpg');
   background-size:cover;
   padding:50px 0;
   background-repeat:no-repeat;
   background-position: center top;
-  @media (max-width: 992px) {
+  @media (max-width: 991px) {
     background:#ffffff;
     padding-bottom:0;
   }
@@ -18,17 +18,19 @@
       text-align: center;
     }
     .title {
-      color: #5a710d;
-      font-family: $ff-mont;
+      color: #5E308B;
+      font-family: $ff-caveat;
       font-weight: 700;
       margin-bottom: 5px;
       line-height: 1.1;
     }
     .sub-title {
-      color: #595955;
+      color: #060606;
       line-height: 1;
+      font-size: 24px;
+      font-weight: 100;
+      margin-top: 15px;
       margin-bottom: 15px;
-      font-weight: 700;
     }
     .sub-title-two {
       color: #595955;
@@ -44,6 +46,12 @@
     flex-wrap: nowrap;
     flex-direction: row;
     align-items: center;
+    padding-top: 30px;
+    padding-bottom: 30px;
+    border-top: 1px solid #979797;
+    &:last-child {
+      border-bottom: 1px solid #979797;
+    }
     @media (max-width: $width-md) {
       flex-direction: column;
     }
@@ -57,13 +65,14 @@
       height: 145px;
       width: 145px;
       border-radius: 99999px;
-      margin-bottom: 30px;
+      @media (max-width: 991px) {
+        margin-bottom: 30px;
+      }
     }
       &__price {
         color: #ffffff;
-        font-family: $ff-mont;
         font-weight: 700;
-        font-size: 80px;
+        font-size: 72px;
         margin-bottom: 0;
         line-height: 1;
         margin-left: 20px;
@@ -72,7 +81,6 @@
         color: #ffffff;
         content: '$';
         font-weight: 700;
-        font-family: $ff-mont;
         position: absolute;
         left: 10px;
         top: 40px;
@@ -97,29 +105,31 @@
         line-height: 1;
         margin-bottom: 10px;
         font-size: 24px;
-        font-family: $ff-mont;
         font-weight: 700;
       }
       &__copy {
         color: #000000;
-        line-height: 1.2;
+        line-height: 1.5;
         margin-bottom: 10px;
-        color: #595955;
         font-size: 18px;
       }
       &__codes {
         color: #000000;
         margin-bottom: 40px;
         text-align: right;
-        color: #595955;
         font-size: 18px;
+      }
+      &__free {
+        color: #ffffff;
+        font-size: 40px;
+        margin-bottom: 0;
       }
 
 
     //Coloring for offer cards
-    $card-one: #0FADC4;
-    $card-two: #D8541E;
-    $card-three: #5a710d;
+    $card-one: #5970DC;
+    $card-two: #CA1F5E;
+    $card-three: #628441;
     &:nth-child(2) {
       .offer-card__price-wrapper {
         background-color: $card-one;
