--- a/src/templates/organisms/new_specials.twig
+++ b/src/templates/organisms/new_specials.twig
@@ -2,51 +2,52 @@
 
     <div class="container clearfix">
         <div class="row">
-            <div class="offers col-md-6">
+            <div class="offers col-md-7">
                 <div class="heading">
-                    <h2 class="title">Limited Time <br>Spring Specials</h2>
-                    <h4 class="sub-title-two">for new uninsured patients only</h4>
-                    <h3 class="sub-title">Offer ends June 20, 2017</h3>
+                    <h2 class="title">Limited Time Summer Specials</h2>
+                    {#<h4 class="sub-title-two">for new uninsured patients only</h4>#}
+                    <h3 class="sub-title">Offers End September 20, 2017</h3>
                 </div>
                 <div class="offer-card">
                     <div class="offer-card__price-wrapper">
                         <h4 class="offer-card__price">65</h4>
-                        <p class="offer-card__price-sub">Save $222</p>
+                        <p class="offer-card__price-sub">Save $125</p>
                     </div>
                     <div class="offer-card__text-wrapper">
-                        <h3 class="offer-card__title">New&nbsp;Patient  Dental&nbsp;Exam</h3>
-                        <h5 class="offer-card__copy">Includes comprehensive exam by the doctor and necessary x-rays.</h5>
-                        <p class="offer-card__codes">(D0150, D0210)</p>
+                        <h3 class="offer-card__title">Children’s New Patient Dental Exam</h3>
+                        <h5 class="offer-card__copy">New patients save $125 on a comprehensive doctor’s exam, including needed digital x-rays and a pre-orthodontic evaluation.</h5>
+                        {#<p class="offer-card__codes">(D0150, D0210)</p>#}
                     </div>
                 </div>
                 <div class="offer-card">
                     <div class="offer-card__price-wrapper">
                         <h4 class="offer-card__price">45</h4>
-                        <p class="offer-card__price-sub">Save $80</p>
+                        <p class="offer-card__price-sub">Save $40</p>
                     </div>
                     <div class="offer-card__text-wrapper">
-                        <h3 class="offer-card__title">New&nbsp;Patient Dental&nbsp;Cleaning</h3>
-                        <h5 class="offer-card__copy">Includes a professional cleaning. A new patient exam is required. Does not include periodontal therapy.</h5>
-                        <p class="offer-card__codes">(D1110)</p>
+                        <h3 class="offer-card__title">Children’s Cleaning and Fluoride</h3>
+                        <h5 class="offer-card__copy">New patients save $40 on a professional dental cleaning and topical  uoride application. A new patient dental exam is required.</h5>
+                        {#<p class="offer-card__codes">(D1110)</p>#}
                     </div>
                 </div>
                 <div class="offer-card">
                     <div class="offer-card__price-wrapper">
-                        <h4 class="offer-card__price">99</h4>
-                        <p class="offer-card__price-sub">Save $253</p>
+                        {#<h4 class="offer-card__price">99</h4>#}
+                        {#<p class="offer-card__price-sub">Save $253</p>#}
+                        <h4 class="offer-card__free">FREE</h4>
                     </div>
                     <div class="offer-card__text-wrapper">
-                        <h3 class="offer-card__title">New&nbsp;Children’s Exam&nbsp;&&nbsp;Cleaning</h3>
-                        <h5 class="offer-card__copy">Patients 12 and under receive a professional dental cleaning, fluoride treatment, needed x-rays, and a comprehensive exam.</h5>
-                        <p class="offer-card__codes">(D0150, D0272, D1120, D1208)</p>
+                        <h3 class="offer-card__title">Children Under 3 are Free!</h3>
+                        <h5 class="offer-card__copy">Bring your children in before their third birthday and receive a free complimentary exam and oral hygiene instruction.</h5>
+                        {#<p class="offer-card__codes">(D0150, D0272, D1120, D1208)</p>#}
                     </div>
                 </div>
             </div>
         </div>
     </div>
 
-    {#<div class="specials-below hidden-lg hidden-md">#}
-        {#<img src="/assets/specials-row.jpg" alt="Happy couple using a tablet">#}
-    {#</div>#}
+    <div class="specials-below hidden-lg hidden-md">
+        <img src="/assets/specials-bg-mobile.jpg" alt="Young girl with a great smile">
+    </div>
 
 </section>
