clean up about and call to action

--- a/src/scss/organisms/_about.scss
+++ b/src/scss/organisms/_about.scss
@@ -1,5 +1,7 @@
 .about {
   background-color: #007481;
+  padding-bottom: 30px;
+  border-bottom: solid 5px #ffffff;
   &__secondary {
     background-color: #f4f3ee;
     padding-top: 20px;
