--- a/src/scss/atoms/_fonts.scss
+++ b/src/scss/atoms/_fonts.scss
@@ -76,6 +76,7 @@ h6 {
 
 .h1,
 h1 {
+	letter-spacing: 2.6px;
 	@include h1();
 }
 
@@ -88,6 +89,7 @@ h1 {
 
 .h2,
 h2 {
+	letter-spacing: 2.6px;
 	@include h2();
 	@media (max-width: $width-xs) {
 		line-height: 1.1;
