--- a/src/scss/organisms/_insurance.scss
+++ b/src/scss/organisms/_insurance.scss
@@ -1,13 +1,13 @@
 #section-insurance {
 
-  $c-no-insurance: #5a710d;
-  $c-sub-header: #5a710d;
-  $c-preventative: #323437;
-  $c-copy: #323437;
-  $c-mobile-bg: #ffffff;
+  $c-no-insurance: #FFE700;
+  $c-sub-header: #CDFFFE;
+  $c-preventative: #FFFFFF;
+  $c-copy: #FFFFFF;
+  $c-mobile-bg: #195B87;
 
   padding-top: 50px;
-  background-image: url('/assets/no-insurance_section.jpg');
+  background-image: url('/assets/insurance-bg.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center center;
@@ -20,21 +20,21 @@
   }
 
   .title {
-    font-family: $ff-mont;
+    font-family: $ff-caveat;
     text-transform: uppercase;
     font-weight: 700;
-    @include font-size(65px, 60px, 55px, 48px, 32px);
+    @include font-size(65px, 60px, 55px, 60px, 46px);
     margin-bottom: 0;
     line-height: 1.1;
     color: $c-no-insurance;
   }
   .sub-title {
-    @include font-size(36px,
-                       32px,
-                       28px,
-                       28px,
-                       20px);
-    font-family: $ff-mont;
+    font-family: $ff-caveat;
+    @include font-size(45px,
+                       40px,
+                       35px,
+                       40px,
+                       29px);
     font-weight: 700;
     color: $c-sub-header;
     margin-bottom: 0;
@@ -44,14 +44,14 @@
     line-height: 1.2;
     padding-top: 30px;
     color: $c-preventative;
-    text-transform: uppercase;
     @include font-size(32px, 30px, 28px, 28px, 20px);
   }
   .list-item {
     list-style: none;
     p {
+      color: $c-copy;
       list-style: none;
-      @include font-size(21px, 21px, 20px, 21px, 16px);
+      @include font-size(21px, 19px, 14px, 19px, 15px);
       font-size: 21px;
       margin-bottom: 0;
       line-height: 1.0;
