--- a/src/templates/organisms/insurance.twig
+++ b/src/templates/organisms/insurance.twig
@@ -1,10 +1,10 @@
 <section id="section-insurance">
     <div class="container">
         <div class="row">
-            <div class="col-sm-7">
+            <div class="col-sm-6 col-sm-push-6">
                 <h2 class="title">No Insurance?</h2>
                 <h3 class="sub-title">Our Patients Don't Need It!</h3>
-                <h4 class="care-text">Get Your Preventive Care<br>For a Low Monthly Fee</h4>
+                <h4 class="care-text">Get your preventive care<br>for a low monthly fee.</h4>
                 <ul>
                     <li class="list-item">
                         <p>Exclusively for our uninsured patients.</p>
@@ -21,6 +21,6 @@
         </div>
     </div>
     <div class="mobile-insurance-fix">
-        <img src="/assets/no-insurance-mobile.jpg" alt="happy mother and child">
+        <img src="/assets/insurance-bg-mobile.jpg" alt="Doctor Howard is great with kids">
     </div>
 </section>
