--- a/src/index.twig
+++ b/src/index.twig
@@ -25,64 +25,94 @@
 
 {% set services = [
 {
-"title": "Smile Design",
-"titleFull": "Smile Design",
-"image": "smile-design.jpg",
-"modalTarget": "smile-design",
-"text": ["Smile design is one of the most cost-effective ways to improve your appearance. A beautiful, bright, healthy smile will increase self-confidence and overall life satisfaction. Cosmetic smile design includes things like tooth-colored restorations, dental implants, and crowns. We have many options, so please call us today!"]
+"title": "Infant Visit",
+"titleFull": "Infant Visit",
+"image": "first-visit.jpg",
+"modalTarget": "infant",
+"text": ["For new parents we follow the recommendations of the American Academy of Pediatric Dentistry - \"first visit by the first birthday\". Recognizing the short attention span of 1 year olds, Dr. Howard will perform an exam, demonstrate proper oral hygiene techniques, and discuss your child's eating, feeding, and oral habits with you."]
 },
 {
-"title": "Family Care",
-"titleFull": "Family Care",
-"image": "family-care.jpg",
-"modalTarget": "family",
-"text": ["From toddlers to the elderly, our skilled dental team is familiar with the unique needs of every patient, no matter their age. Our goal is to help them develop great oral habits that will last them a lifetime.",
-"Join us today and discover how our practice can help treat your entire family."]
+"title": "Preventive Care",
+"titleFull": "Preventive Care",
+"image": "preventice.jpg",
+"modalTarget": "preventice",
+"text": ["Prevention is always better than treatment. Brush your teeth twice daily using any soft-bristled, ADA-approved tooth brush. We also recommend the use of modern electric tooth brushes such as Sonicare and Braun. Floss daily to remove plaque between teeth that you can't reach with regular brushing.",
+"Always rinse thoroughly with water after brushing (or after meals if you are unable to brush.) You may occasionally use a mouthwash to rinse. Children may benefit from the use of ACT fluoride rinse, to help prevent cavities from forming in between the teeth."]
 },
 {
-"title": "Sedation Dentistry",
-"titleFull": "Sedation Dentistry",
-"image": "sedation.jpg",
+"title": "Child’s First Cleaning",
+"titleFull": "Child’s First Cleaning",
+"image": "exams.jpg",
 "modalTarget": "sedation",
-"text": ["Sedation dentistry is an excellent treatment for patients with extensive dental needs, or who are concerned about anxiety, difficulty getting numb, or sensitive teeth."]
+"text": ["We recommend a complete dental exam, a professional cleaning, and a topical fluoride application at 2 to 3 yrs of age. During this visit we allow extra time for your child to become acquainted with our staff and to inspect our facilities. By proceeding at a reasonable pace and explaining procedures in age appropriate terminology, most fears and anxieties are eliminated.",
+"We evaluate your child's brushing skills and correct any deficiencies. X-rays are not a routine part of our exam, and are only administered when further information is necessary to complete an accurate diagnosis."]
 },
 {
-"title": "Dental Implants",
-"titleFull": "Dental Implants",
-"image": "implants.jpg",
-"modalTarget": "implants",
-"text": ["Dental implants are a great option for replacing missing teeth, improving chewing ability, eliminating bridges, and replacing dentures.",
-"Several implants may provide a base for a series of artificial teeth known as a fixed bridge. Implants can even be used to secure a full set of removable dentures for people who have no remaining natural teeth."]
+"title": "Sealants and Fillings",
+"titleFull": "Sealants and Fillings",
+"image": "sealants-fillings.jpg",
+"modalTarget": "sealants",
+"text": ["Normal pits and grooves on the chewing surfaces of back teeth can trap food that can't be removed by brushing or washed out by water or saliva. A sealant is a tough, plastic material designed to bond (stick) to tooth enamel.",
+"Composite fillings are more than just attractive. They require minimal tooth preparation, in other words less healthy tooth structure is removed to restore the tooth. Also, a sealant can be placed over the remaining exposed grooves of the tooth to minimize the risk of decay on another area of the tooth."]
 },
 {
-"title": "Wisdom Teeth",
-"titleFull": "Wisdom Tooth Removal",
-"image": "wisdom-teeth.jpg",
-"modalTarget": "wisdom",
-"text": ["Normally appearing in late teenage years or early twenties, your third molars or “wisdom teeth” are commonly removed due to several issues that may arise including crowding, being impacted, and gum tissue-related problems. Dr. Kennedy removes wisdom teeth in-office."]
+"title": "Crowns",
+"titleFull": "Crowns",
+"image": "crowns.jpg",
+"modalTarget": "crowns",
+"text": ["A crown (often called a cap) covers the tooth and restores it to its original shape and size. Decay is removed and cleaned from the tooth and a preformed crown is placed over the tooth. Unlike adult crowns, in which the crown is made to fit the tooth, which requires two appointments, baby crowns are placed in one visit, because the tooth is prepared to fit the crown."]
 },
 {
-"title": "Smile Whitening",
-"titleFull": "Smile Whitening",
+"title": "Space Maintainersg",
+"titleFull": "Space Maintainersg",
+"image": "space-maintainers.jpg",
+"modalTarget": "space",
+"text": ["When your child prematurely loses a baby tooth, the use of a space maintainer may be used. A space maintainer -- a combination of bands and wires designed to hold the remaining teeth in a position that will allow the future permanent tooth to erupt in the proper location."]
+},
+{
+"title": "Orthodontics",
+"titleFull": "Orthodontic Treatment",
+"image": "orthodontics.jpg",
+"modalTarget": "orthodontics",
+"text": ["Dr. Howard offers complete non-surgical orthodontic care for the pediatric and adolescent patient. As a pediatric dentist trained in orthodontics he is able to optimize the benefits of your child's growth and development by providing age appropriate interceptive orthodontic therapy in conjunction with your child's regular dental care. By intercepting developing occlusal problems early, we are able to improve eruption patterns and thereby minimize or eliminate any second phase of orthodontic therapy. Call today to schedule an orthodontic consultation."]
+},
+{
+"title": "Mouth Guards",
+"titleFull": "Mouth Guards",
+"image": "mouth-guards.jpg",
+"modalTarget": "guards",
+"text": ["We recommend mouth guards for all our sports active patients. A mouth protector minimizes the potential for tooth fracture or loss due to traumatic injury. In addition, it can reduce the concussive effects of certain head injuries.",
+"We provide custom-made pro-style mouth guards to all of our orthodontic patients free of charge during treatment."]
+},
+{
+"title": "Tooth Whitening",
+"titleFull": "Tooth Whitening",
 "image": "whitening.jpg",
 "modalTarget": "whitening",
-"text": ["Many everyday things like coffee, tea and wine can significantly dull teeth. Smile-whitening enables us to significantly brighten your smile for that dazzling white smile you deserve.",
-"Plastic whitening trays will be made from models of your teeth. You will then place a special whitening gel in each tray and wear the trays in your mouth for several hours per day. (Many patients wear their trays after dinner and before bed.) A significant change in tooth color is usually seen in just four to six weeks."]
+"text": ["Tooth whitening has become a cost effective and valuable tool in the creation of a beautiful smile. However, many patients experience unnecessary sensitivity and discomfort when whitening. Dr. Howard offers an affordable, comfortable, and customized whitening program which eliminates many of the discomforts and inconveniences associated with whitening."]
 },
 {
-"title": "Bonding",
-"titleFull": "Bonding",
-"image": "bonding.jpg",
-"modalTarget": "bonding",
-"text": ["Composite resin is a white, tooth colored material that can be shaded to match your teeth. This material can give you a low-cost improvement in your smile."]
+"title": "Digital X-Rays",
+"titleFull": "Digital X-Rays",
+"image": "x-rays.jpg",
+"modalTarget": "x-rays",
+"text": ["Dental x-rays or radiographs allow the dentist to see things about your oral health that cannot be seen by the naked eye. These items include cysts, cancerous and non-cancerous tumors, invisible decay that occurs between teeth, and the location of teeth that haven't grown all the way in.",
+"Modern dental x-ray machines are very safe. We use only state-of-the-art, low radiation machines. The amount of radiation exposure your body receives on an airplane flight from Los Angeles to New York exceeds the amount of exposure you will receive from a modern dental x-ray machine. Contrast this minimal exposure with the risk of not finding an illness until it is too late, and you can see why we prescribe regular diagnostic x-rays."]
 },
 {
-"title": "Porcelain Veneers",
-"titleFull": "Porcelain Veneers",
-"image": "veneers.jpg",
-"modalTarget": "veneers",
-"text": ["Veneers are very thin porcelain pieces that are custom made to adhere directly to the front of teeth without grinding or shaving. Transform your smile without drilling on your natural teeth!",
-"In the hands of a highly skilled dentist, porcelain laminates can provide you with an incredibly natural, beautiful smile. They are virtually undetectable and can dramatically improve your appearance. They are durable and long-lasting when compared to other cosmetic treatments."]
+"title": "Patient Comfort",
+"titleFull": "Patient Comfort",
+"image": "patient-comfort.jpg",
+"modalTarget": "comfort",
+"text": ["Dr. Jaha Howard's office was designed for infants, children and teens. Our facilities are designed to make kids feel right at home. It's a unique Jungle-themed atmosphere that helps children relax and enjoy their experience. Children deserve to experience a gentle, caring approach to their dental care.",
+"We offer nitrous oxide (laughing gas) for the slightly anxious child. An extremely safe option, nitrous oxide helps a child who is cooperative but worried about various aspects of their appointment. It helps alleviate anxiety about having instruments placed in the mouth."]
+},
+{
+"title": "Privacy Policy",
+"titleFull": "Privacy Policy",
+"image": "privacy.jpg",
+"modalTarget": "privacy",
+"text": ["We are required by law to maintain the privacy of \"protected health information.\" \"Protected health information\" includes any identifiable information that we obtain from you or others that relates to your physical or mental health, the health care you have received, or payment for your health care."]
 }
 ] %}
 
