--- a/src/scss/molecules/_tour-carousel.scss
+++ b/src/scss/molecules/_tour-carousel.scss
@@ -1,15 +1,16 @@
-#section-tour {
+.tour-carousel {
   padding-top: 5px;
   padding-bottom: 5px;
   background-color: white;
 
   .owl-carousel .owl-nav [class*=owl-] {
     right: 0;
-    background-color: #323437;
+    background-color: rgba(17, 142, 148, 0.31);
     border-radius: 5px;
     display: flex;
     justify-content: center;
     align-items: center;
+    color: #765F8F !important;
   }
   .owl-carousel:hover .owl-nav [class*=owl-] img {
     transition: display .3s ease;
@@ -26,8 +27,8 @@
   }
 
   .owl-carousel .owl-nav [class*=owl-]:hover {
-    background-color: #595955 !important;
-    color: $c-white !important;
+    background-color: rgba(17, 142, 148, 0.66) !important;
+    color: #765F8F !important;
     text-decoration: none;
   }
 }
