--- a/src/templates/layouts/index.twig
+++ b/src/templates/layouts/index.twig
@@ -45,16 +45,7 @@
 
         {% include 'organisms/services.twig' %}
 
-        {% include 'molecules/cta__two-to-one.twig' with
-            {
-                'id': 'id="cta-three"',
-                'existingPatients': true
-            }
-        %}
-
-        {% include 'organisms/smile-gallery.twig' %}
-
-        {% include 'organisms/tour.twig' %}
+        {% include 'organisms/tour__simple-slab-n-modal.twig' %}
 
         {% include 'organisms/location--floating-card.twig' %}
 
