--- a/src/templates/organisms/tour.twig
+++ b/src/templates/organisms/tour.twig
@@ -1,25 +1,15 @@
-<div id="section-tour">
+<div class="tour-carousel">
 
     {% if container %}
     <div class="container">
         {% endif %}
 
-        <div class="owl-carousel js-tour-carousel tour-carousel" >
+        <div class="owl-carousel js-tour-carousel" >
 
-            <img src="/assets/tour/01.jpg" alt="outside the office">
-            <img src="/assets/tour/02.jpg" alt="outside the office">
-            <img src="/assets/tour/03.jpg" alt="office bike rack">
-            <img src="/assets/tour/04.jpg" alt="waiting room">
-            <img src="/assets/tour/05.jpg" alt="waiting room">
-            <img src="/assets/tour/06.jpg" alt="waiting room">
-            <img src="/assets/tour/07.jpg" alt="waiting room">
-            <img src="/assets/tour/08.jpg" alt="main desk">
-            <img src="/assets/tour/09.jpg" alt="main desk">
-            <img src="/assets/tour/10.jpg" alt="comfy waiting chairs">
-            <img src="/assets/tour/11.jpg" alt="nice office mugs">
-            <img src="/assets/tour/12.jpg" alt="office Keurig machine">
-            <img src="/assets/tour/13.jpg" alt="dental chair">
-            <img src="/assets/tour/14.jpg" alt="clean nice office">
+            <img src="/assets/tour/1.jpg" alt="Fun stuffed animal">
+            <img src="/assets/tour/2.jpg" alt="Welcome sign at the office">
+            <img src="/assets/tour/3.jpg" alt="Very kid friendly office art">
+            <img src="/assets/tour/4.jpg" alt="Classic red kids' toys vending machine">
 
         </div>
 
