--- a/src/templates/layouts/index.twig
+++ b/src/templates/layouts/index.twig
@@ -47,7 +47,7 @@
 
         {% include 'organisms/tour__simple-slab-n-modal.twig' %}
 
-        {% include 'organisms/location--floating-card.twig' %}
+        {% include 'organisms/location.twig' %}
 
     </div>
 
