--- a/src/templates/organisms/location--floating-card.twig
+++ b/src/templates/organisms/location--floating-card.twig
@@ -36,7 +36,7 @@
                                     <td>8:00am - 5:00pm</td>
                                 </tr>
                                 <tr>
-                                    <th class="t400">Wednesday</th>
+                                    {#<th class="t400">Wednesday</th>#}
                                     <td>8:00am - 5:00pm</td>
                                 </tr>
                                 <tr>
