--- a/src/scss/organisms/_location--floating-card.scss
+++ b/src/scss/organisms/_location--floating-card.scss
@@ -1,105 +1,96 @@
-.location-card {
-  background: $c-white;
-  margin: 30px 0;
-  @media (max-width: $width-md) {
-    margin-bottom: 5px;
-    margin-top: 0px;
-    background-color: rgba(255, 255, 255, 0);
-    padding-left: 0;
-    padding-right: 0;
-  }
+//.location-card {
+//  background: $c-white;
+//  margin: 30px 0;
+//  @media (max-width: $width-md) {
+//    margin-bottom: 5px;
+//    margin-top: 0px;
+//    background-color: rgba(255, 255, 255, 0);
+//    padding-left: 0;
+//    padding-right: 0;
+//  }
+//
+//  &__logo {
+//    &--wrapper {
+//      background-color: #323437;
+//      text-align: center;
+//      padding-top: 10px;
+//      padding-bottom: 10px;
+//      @media (max-width: $width-md) {
+//        background: none;
+//      }
+//    }
+//    max-height: 115px;
+//  }
+//
+//  &__content {
+//    text-align: center;
+//    padding-left: 10px;
+//    padding-right: 10px;
+//  }
+//    &__doctor {
+//      color: #5a710d;
+//      font-family: $ff-mont;
+//      margin-bottom: 0;
+//      margin-top: 10px;
+//    }
+//    &__doctor-sub {
+//      color: #444444;
+//    }
+//    &__address {
+//      color: #444444;
+//    }
+//    &__map-link {
+//      color: #5a710d;
+//      text-decoration: underline;
+//    }
+//    &__new-patient-text {
+//      font-size: 21px;
+//      margin-bottom: 0;
+//      line-height: 1.0;
+//    }
+//    &__new-patient-number {
+//      display: block;
+//      font-size: 44px;
+//      @include font-size(44px, 42px, 40px, 38px, 36px);
+//      font-family: $ff-roboto-condensed;
+//      font-weight: 700;
+//      color: #595955;
+//      margin-bottom: 25px;
+//      line-height: 1;
+//      &:hover {
+//        color: #595955;
+//        text-decoration: none;
+//      }
+//    }
+//    &__existing-patient-text {
+//      margin-top: 30px;
+//      line-height: 1;
+//      margin-bottom: 0;
+//    }
+//    &__existing-patient-number {
+//      font-size: 21px;
+//      font-weight: 700;
+//      line-height: 1;
+//      margin-bottom: 30px;
+//      color: #595955;
+//      &:hover {
+//        color: #595955;
+//        text-decoration: none;
+//      }
+//    }
+//    .hours-table {
+//      h5 {
+//        font-weight: 700;
+//        font-family: $ff-mont;
+//        color: #5a710d;
+//      }
+//      tbody {
+//        margin-left: auto;
+//        margin-right: auto;
+//      }
+//    }
+//}
 
-  &__logo {
-    &--wrapper {
-      background-color: #323437;
-      text-align: center;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      @media (max-width: $width-md) {
-        background: none;
-      }
-    }
-    max-height: 115px;
-  }
-
-  &__content {
-    text-align: center;
-    padding-left: 10px;
-    padding-right: 10px;
-  }
-    &__doctor {
-      color: #5a710d;
-      font-family: $ff-mont;
-      margin-bottom: 0;
-      margin-top: 10px;
-    }
-    &__doctor-sub {
-      color: #444444;
-    }
-    &__address {
-      color: #444444;
-    }
-    &__map-link {
-      color: #5a710d;
-      text-decoration: underline;
-    }
-    &__new-patient-text {
-      font-size: 21px;
-      margin-bottom: 0;
-      line-height: 1.0;
-    }
-    &__new-patient-number {
-      display: block;
-      font-size: 44px;
-      @include font-size(44px, 42px, 40px, 38px, 36px);
-      font-family: $ff-roboto-condensed;
-      font-weight: 700;
-      color: #595955;
-      margin-bottom: 25px;
-      line-height: 1;
-      &:hover {
-        color: #595955;
-        text-decoration: none;
-      }
-    }
-    &__existing-patient-text {
-      margin-top: 30px;
-      line-height: 1;
-      margin-bottom: 0;
-    }
-    &__existing-patient-number {
-      font-size: 21px;
-      font-weight: 700;
-      line-height: 1;
-      margin-bottom: 30px;
-      color: #595955;
-      &:hover {
-        color: #595955;
-        text-decoration: none;
-      }
-    }
-    .hours-table {
-      h5 {
-        font-weight: 700;
-        font-family: $ff-mont;
-        color: #5a710d;
-      }
-      tbody {
-        margin-left: auto;
-        margin-right: auto;
-      }
-    }
-
-
-
-}
-
-#google-map5 {
-  height: 700px;
-  @media (max-width: $width-md) {
-    height: 300px;
-  }
-}
 
 #content .floating-card {
   position: absolute;
@@ -155,14 +146,6 @@
     @media (max-width: $width-md) {
       margin-left: auto;
     }
-  }
-}
-
-
-#google-map5 {
-  height: 850px;
-  @media (max-width: $width-md) {
-    height: 300px;
   }
 }
 
