remove two errors

--- a/src/scss/organisms/_services.scss
+++ b/src/scss/organisms/_services.scss
@@ -1,8 +1,8 @@
 #section-services {
-  background-image: url('/assets/services-section.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: 75% center;
+  //background-image: url('/assets/services-section.jpg');
+  //background-size: cover;
+  //background-repeat: no-repeat;
+  //background-position: 75% center;
   padding-bottom: 5px;
   @media (max-width: $width-sm - 1) {
     background-image: none;
