--- a/src/templates/organisms/about.twig
+++ b/src/templates/organisms/about.twig
@@ -47,7 +47,7 @@
                     <h3 class="modal-title">Buy Back Bling</h3>
                 </div>
                 <div class="modal-body">
-                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ij80aLjokfA" frameborder="0" allowfullscreen id="video-iframe"></iframe>
+                    <iframe width="560" height="315" src="https://www.youtube.com/embed/ij80aLjokfA" allowfullscreen id="video-iframe"></iframe>
                 </div>
             </div><!-- /.modal-content -->
         </div><!-- /.modal-dialog -->
