internal QA edits

--- a/src/index.twig
+++ b/src/index.twig
@@ -29,10 +29,10 @@
 "titleFull": "Infant Visit",
 "image": "first-visit.jpg",
 "modalTarget": "infant",
-"text": ["For new parents we follow the recommendations of the American Academy of Pediatric Dentistry - \"first visit by the first birthday\". Recognizing the short attention span of 1 year olds, Dr. Howard will perform an exam, demonstrate proper oral hygiene techniques, and discuss your child's eating, feeding, and oral habits with you."]
+"text": ['For new parents we follow the recommendations of the American Academy of Pediatric Dentistry - "first visit by the first birthday". Recognizing the short attention span of 1 year olds, Dr. Howard will perform an exam, demonstrate proper oral hygiene techniques, and discuss your child\'s eating, feeding, and oral habits with you.']
 },
 {
-"title": "Sealants and Fillings",
+"title": "Sealants/Fillings",
 "titleFull": "Sealants and Fillings",
 "image": "sealants-fillings.jpg",
 "modalTarget": "sealants",
@@ -94,8 +94,8 @@
 "We evaluate your child's brushing skills and correct any deficiencies. X-rays are not a routine part of our exam, and are only administered when further information is necessary to complete an accurate diagnosis."]
 },
 {
-"title": "Space Maintainersg",
-"titleFull": "Space Maintainersg",
+"title": "Space Maintainers",
+"titleFull": "Space Maintainers",
 "image": "space-maintainers.jpg",
 "modalTarget": "space",
 "text": ["When your child prematurely loses a baby tooth, the use of a space maintainer may be used. A space maintainer -- a combination of bands and wires designed to hold the remaining teeth in a position that will allow the future permanent tooth to erupt in the proper location."]
@@ -112,7 +112,7 @@
 "titleFull": "Privacy Policy",
 "image": "privacy.jpg",
 "modalTarget": "privacy",
-"text": ["We are required by law to maintain the privacy of \"protected health information.\" \"Protected health information\" includes any identifiable information that we obtain from you or others that relates to your physical or mental health, the health care you have received, or payment for your health care."]
+"text": ['We are required by law to maintain the privacy of "protected health information." "Protected health information" includes any identifiable information that we obtain from you or others that relates to your physical or mental health, the health care you have received, or payment for your health care.']
 }
 ] %}
 
