--- a/src/templates/organisms/new_specials.twig
+++ b/src/templates/organisms/new_specials.twig
@@ -38,7 +38,7 @@
                     </div>
                     <div class="offer-card__text-wrapper">
                         <h3 class="offer-card__title">Children Under 3 are Free!</h3>
-                        <h5 class="offer-card__copy">Bring your children in before their third birthday and receive a free complimentary exam and oral hygiene instruction.</h5>
+                        <h5 class="offer-card__copy">Bring your children in before their third birthday and receive a free complimentary exam and oral hygiene&nbsp;instruction.</h5>
                         {#<p class="offer-card__codes">(D0150, D0272, D1120, D1208)</p>#}
                     </div>
                 </div>
