--- a/src/scss/molecules/_location-card__simple.scss
+++ b/src/scss/molecules/_location-card__simple.scss
@@ -31,6 +31,9 @@
     color: #5E308B;
     font-weight: 400;
     font-size: 28px;
+    @media (max-width: 550px) {
+      font-size: 26px;
+    }
     margin-bottom: 10px;
     margin-top: 10px;
   }
