--- a/src/scss/organisms/_reviews.scss
+++ b/src/scss/organisms/_reviews.scss
@@ -4,6 +4,8 @@
   background-repeat: no-repeat;
   background-position: 50% 100%;
   border-bottom: solid 5px #92BF63;
+  padding-top: 30px;
+  padding-bottom: 30px;
 
 
 
