replace header and location logos

--- a/src/templates/molecules/location-card__simple.twig
+++ b/src/templates/molecules/location-card__simple.twig
@@ -1,7 +1,7 @@
 <div class="location-card">
 
     <div class="location-card__logo--wrapper">
-        <img  src="assets/A+_Dental_Logo.png" alt="{{ mainDoctor }}" class="location-card__logo">
+        <img  src="assets/footer-logo_aplus.png" alt="{{ mainDoctor }}" class="location-card__logo">
     </div>
 
     <div class="location-card__content">
