--- a/src/templates/organisms/header.twig
+++ b/src/templates/organisms/header.twig
@@ -11,7 +11,7 @@
         <div id="logo">
             <a href="#" data-scrollto="#header" data-offset="60">
                 <div>
-                    <img src="assets/nav_logo.png" alt="{{ mainDocter }}">
+                    <img src="assets/aplus-logo-howard.png" alt="{{ mainDocter }}">
                 </div>
             </a>
         </div><!-- #logo end -->
