--- a/src/templates/organisms/reviews.twig
+++ b/src/templates/organisms/reviews.twig
@@ -14,6 +14,8 @@
             </div>
         </div>
     </div>
+    <img src="assets/bottom-left-corner.png" alt="visual flair" class="section-reviews__flair section-reviews__flair--left">
+    <img src="assets/bottom-right-corner.png" alt="visual flair" class="section-reviews__flair section-reviews__flair--right">
     {#<!--<div class="mobile-image hidden-lg hidden-md hidden-sm">-->#}
     {#<!--<img src="/assets/reviews-bg.jpeg" alt="Happy Couple with nice teeth">-->#}
     {#<!--</div>-->#}
