last edits from Eric

--- a/src/index.twig
+++ b/src/index.twig
@@ -21,7 +21,7 @@
 
 {# External Links #}
 {% set insuranceLink = 'https://a-pediatric-dentistry-of-atlanta.illumitrac.com/#programs' %}
-{% set googleMap = 'https://www.google.com/maps/place/Howard+J+DDS/@33.8646248,-84.4670102,20.16z/data=!4m7!3m6!1s0x88f5106e60546ecd:0xd66e75d21e3b2b7c!8m2!3d33.8647032!4d-84.4668653!9m1!1b1?hl=en' %}
+{% set googleMap = 'https://www.google.com/maps/place/Howard+J+DDS/@33.8645139,-84.4677422,17.34z/data=!4m5!3m4!1s0x88f5106e60546ecd:0xd66e75d21e3b2b7c!8m2!3d33.8647032!4d-84.4668653?hl=en' %}
 
 {% set services = [
 {
@@ -90,7 +90,7 @@
 "titleFull": "Child’s First Cleaning",
 "image": "exams.jpg",
 "modalTarget": "sedation",
-"text": ["We recommend a complete dental exam, a professional cleaning, and a topical fluoride application at 2 to 3 yrs of age. During this visit we allow extra time for your child to become acquainted with our staff and to inspect our facilities. By proceeding at a reasonable pace and explaining procedures in age appropriate terminology, most fears and anxieties are eliminated.",
+"text": ["We recommend a complete dental exam, a professional cleaning, and topical fluoride application. During this visit we allow extra time for your child to become acquainted with our staff and to inspect our facilities. By proceeding at a reasonable pace and explaining procedures in age appropriate terminology, most fears and anxieties are eliminated.",
 "We evaluate your child's brushing skills and correct any deficiencies. X-rays are not a routine part of our exam, and are only administered when further information is necessary to complete an accurate diagnosis."]
 },
 {
