--- a/src/templates/molecules/location-card__simple.twig
+++ b/src/templates/molecules/location-card__simple.twig
@@ -17,7 +17,7 @@
             <a href="tel:{{ existingPhone }}" class="link-no-style location-card__existing-patient-number">{{ existingPhoneNoBreak }}</a>
         </p>
         <a class="btn align-fix location-card__btn btn--style-two" data-toggle="modal" data-target="#requestAppointmentForm">Request an Appointment</a>
-        {#{% include 'atoms/hours-table.twig' %}#}
+        {% include 'atoms/hours-table.twig' %}
 
         <a href="http://www.viningsjubilee.com/" target="_blank" class="location-card__jubilee">
             <img src="assets/vinings-logo.jpg" alt="Vinings Jubilee">
