--- a/src/templates/organisms/new_specials.twig
+++ b/src/templates/organisms/new_specials.twig
@@ -6,7 +6,7 @@
                 <div class="heading">
                     <h2 class="title">Limited Time Summer Specials</h2>
                     {#<h4 class="sub-title-two">for new uninsured patients only</h4>#}
-                    <h3 class="sub-title">Offers End September 20, 2017</h3>
+                    <h3 class="sub-title">Offers End September&nbsp;20,&nbsp;2017</h3>
                 </div>
                 <div class="offer-card">
                     <div class="offer-card__price-wrapper">
