--- a/src/scss/molecules/_location-card__simple.scss
+++ b/src/scss/molecules/_location-card__simple.scss
@@ -83,12 +83,12 @@
     }
   }
   &__btn {
-    margin-bottom: 45px;
+    margin-bottom: 15px;
   }
   &__jubilee {
     display: block;
     img {
-      max-width: 240px;
+      max-width: 180px;
     }
   }
   &__social-media {
@@ -99,8 +99,9 @@
 
   .hours-table {
     h5 {
+      font-family: $ff-poppins;
       font-weight: 700;
-      color: #5a710d;
+      color: #5E308B;
     }
     tbody {
       margin-left: auto;
