undue wrong edit

--- a/src/index.twig
+++ b/src/index.twig
@@ -90,7 +90,7 @@
 "titleFull": "Child’s First Cleaning",
 "image": "exams.jpg",
 "modalTarget": "sedation",
-"text": ["We recommend a complete dental exam, a professional cleaning, and topical fluoride application. During this visit we allow extra time for your child to become acquainted with our staff and to inspect our facilities. By proceeding at a reasonable pace and explaining procedures in age appropriate terminology, most fears and anxieties are eliminated.",
+"text": ["We recommend a complete dental exam, a professional cleaning, and a topical fluoride application at 2 to 3 yrs of age. During this visit we allow extra time for your child to become acquainted with our staff and to inspect our facilities. By proceeding at a reasonable pace and explaining procedures in age appropriate terminology, most fears and anxieties are eliminated.",
 "We evaluate your child's brushing skills and correct any deficiencies. X-rays are not a routine part of our exam, and are only administered when further information is necessary to complete an accurate diagnosis."]
 },
 {
