--- a/src/templates/organisms/new_specials.twig
+++ b/src/templates/organisms/new_specials.twig
@@ -26,7 +26,7 @@
                     </div>
                     <div class="offer-card__text-wrapper">
                         <h3 class="offer-card__title">Children’s Cleaning and Fluoride</h3>
-                        <h5 class="offer-card__copy">New patients save $40 on a professional dental cleaning and topical  uoride application. A new patient dental exam is required.</h5>
+                        <h5 class="offer-card__copy">New patients save $40 on a professional dental cleaning and topical fluoride application. A new patient dental exam is required.</h5>
                         {#<p class="offer-card__codes">(D1110)</p>#}
                     </div>
                 </div>
